# gen-reels

./: .dockerignore  .gitignore  README.md  a-project-documentation-review.md  b-project-documentation-review.md  discussion-3.md  docker-compose.gpu.yml  docker-compose.yml  frontend-report.md  frontenddesign.md  project-idea.md  reels.db
backend/: .env.example  Dockerfile  README.md  alembic.ini  celerybeat-schedule  diag.db  pyproject.toml  reels.db
backend/alembic/: env.py
backend/alembic/versions/: 20260329_0001_initial_phase1.py  20260329_0002_phase2_content_planning.py  20260329_0003_phase3_render_mvp.py  20260329_0004_phase4_reliability_and_billing.py  20260329_0005_phase5_polish_and_creator_productivity.py  20260329_0006_phase6_collaboration_and_studio.py  20260329_0007_phase7_local_and_byo_expansion.py  20260329_0008_backend_completion.py  20260330_0009_quick_start_bootstrap.py  20260330_0010_project_stage_frames.py  20260401_0006_video_library.py  20260401_0007_local_folder_projects.py  20260401_0008_music_and_subtitle_presets.py  20260401_0009_remix.py  20260402_0010_remix_video_fk_set_null.py  20260402_0011_remix_project_output_fk_set_null.py  20260402_0012_series_v1.py  20260402_0013_series_v2.py  20260403_0012_remix_project_subtitle_config.py  20260404_0014_youtube_publishing.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py  router.py
backend/client-secret/: client_secret.example.json
backend/reels_generation_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: init-minio.sh
(+301 files in other folders)
