[project]
name = "reels-generation-backend"
version = "0.1.0"
description = "Phase 1 FastAPI backend for the Reels Generation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "celery[redis]>=5.4.0",
  "cryptography>=44.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.8",
  "httpx>=0.28.1",
  "minio>=7.2.15",
  "Pillow>=11.1.0",
  "passlib[argon2]>=1.7.4",
  "psycopg[binary]>=3.2.4",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.38",
  "uvicorn[standard]>=0.34.0",
  "faster-whisper>=1.0.3",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.28.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.5",
]

[project.scripts]
reels-api = "app.main:run"
reels-cli = "app.cli:main"

[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "app",
  "app.api",
  "app.api.routes",
  "app.core",
  "app.db",
  "app.models",
  "app.schemas",
  "app.services",
  "app.integrations",
  "app.workers",
  "app.tests",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
